fix sonarcloud action

--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -17,7 +17,6 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@v3
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          args: >
+          args:
             -Dsonar.projectKey=alexey-sidorov-dev_otus-java-basic-part-one
             -Dsonar.organization=alexey-sidorov-dev
-          projectBaseDir: .
