--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify sonar:sonar -Dstyle.color=always
+        run: mvn clean -B verify sonar:sonar
         with:
           args:
             -Dsonar.projectKey=alexey-sidorov-dev_otus-java-basic-part-one
