--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,4 +1,4 @@
-name: Sonar Scanner
+name: SonarCloud Scanner
 
 on: pull_request
 
@@ -15,16 +15,4 @@ jobs:
           distribution: corretto
           cache: maven
       - name: Analyze with Sonar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn clean -B verify sonar:sonar
-        with:
-          args:
-            -Dsonar.projectKey=alexey-sidorov-dev_otus-java-basic-part-one
-            -Dsonar.projectName=otus-java-basic-part-one
-            -Dsonar.projectVersion=1.0
-            -Dsonar.organization=alexey-sidorov-dev
-            -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.login=$SONAR_TOKEN
-            -Dsonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
