fix env.properties in actions

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,5 +14,7 @@ jobs:
           java-version: 17
           distribution: corretto
           cache: maven
+      - name: Create env.properties file
+        run: echo "${{ secrets.ENV_PROPERTIES }}" > env.properties
       - name: Build with Maven
         run: mvn clean -B package -Dstyle.color=always
