--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -14,7 +14,7 @@ jobs:
           java-version: 17
           distribution: corretto
           cache: maven
+      - name: Create env.properties file
+        run: echo "${{ secrets.ENV_PROPERTIES }}" > env.properties
       - name: Build and Analyze with Sonar
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn clean -B verify -Dstyle.color=always
