--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,7 +3,7 @@ name: SonarCloud Scanner
 on: pull_request
 
 jobs:
-  build:
+  check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -16,5 +16,10 @@ jobs:
           cache: maven
       - name: Create env.properties file
         run: echo "${{ secrets.ENV_PROPERTIES }}" > env.properties
-      - name: Build and Analyze with Sonar
+      - name: Analyze with Sonar
         run: mvn clean -B verify -Dstyle.color=always
+      - name: Jacoco Report
+        uses: madrapps/jacoco-report@v1
+        with:
+          paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
