--- a/pom.xml
+++ b/pom.xml
@@ -100,11 +100,6 @@
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
-                                <configuration>
-                                    <formats>
-                                        <format>XML</format>
-                                    </formats>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -122,6 +117,7 @@
                 <sonar.projectVersion>1.0</sonar.projectVersion>
                 <sonar.organization>alexey-sidorov-dev</sonar.organization>
                 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.maven.scanAll>true</sonar.maven.scanAll>
                 <sonar.coverage.jacoco.xmlReportPaths>./target/site/jacoco/jacoco.xml
                 </sonar.coverage.jacoco.xmlReportPaths>
                 <!--suppress UnresolvedMavenProperty -->
