--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: SonarCloud Scanner
+name: Check
 
 on: pull_request
 
@@ -21,5 +21,5 @@ jobs:
       - name: Jacoco Report
         uses: madrapps/jacoco-report@v1
         with:
-          paths: ./target/site/jacoco/jacoco.xml
+          paths: ${{ github.workspace }}/**/target/site/jacoco/jacoco.xml
           token: ${{ secrets.GITHUB_TOKEN }}
