--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Jacoco Report
         uses: madrapps/jacoco-report@v1
         with:
-          paths: ${{ github.workspace }}/**/target/site/jacoco/jacoco.xml
+          paths: /target/site/jacoco/jacoco.xml
           token: ${{ secrets.GITHUB_TOKEN }}
